k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: inventory

spec:
  replicas: 1

  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

    spec:
      containers:
        - name: django

          image: sharanketon/inventory-management-system:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          # ==============================
          # READINESS PROBE
          # ==============================
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          # ==============================
          # LIVENESS PROBE
          # ==============================
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          # ==============================
          # RESOURCE REQUESTS AND LIMITS
          # ==============================
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # ==============================
          # ENVIRONMENT VARIABLES
          # ==============================
