k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: inventory
spec:
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
